feat: [ Usuario ] Foi ajustado cadastro de usuário: Separação das depend